# QuantCB2.0

./: .gitignore  Cargo.toml  README.md
src/: batcher.rs  bpe_encoder.rs  bpe_trainer.rs  bpe_types.rs  config.rs  dataset.rs  generator.rs  kv_cache.rs  layer.rs  learning.rs  main.rs  mla.rs  model.rs  moe.rs  mtp.rs  tokenizer.rs  trainer.rs  trainer_config.rs  training_data.rs
src/model/: bitlinear.rs  config.rs  layer.rs  mla.rs  mod.rs  model.rs  moe.rs  mtp.rs
src/model/kernels/: kernel.rs  mod.rs  ternary_matmul.wgsl
src/training/: mod.rs
src/training/data/: dataset.rs  learning.rs  mod.rs  training_data.rs
src/training/tokenizer/: blt_patcher.rs  bpe_encoder.rs  bpe_trainer.rs  entropy_patcher.rs  entropy_prepass.rs  local_encoder.rs  mod.rs  tokenizer.rs
src/training/trainer/: batcher.rs  checkpoint.rs  core.rs  data_stream.rs  metrics.rs  mod.rs  mode.rs  sampler.rs  streamer.rs  trainer.rs  trainer_config.rs
