[package]
name = "QuantCB2_0"
version = "0.1.0"
edition = "2024"

[dependencies]
# Standard Burn setup for Vulkan compute
burn = { version = "0.13.2", features = ["wgpu", "train"] }

# Explicitly pinning bincode to the exact RC version required by Burn
# This avoids the 'decode_borrowed_from_slice' compilation error
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }