[package]
name = "QuantCB2_0"
version = "0.1.0"
edition = "2024"

[dependencies]
# Burn framework with necessary features for WGPU and training
burn = { version = "0.13.2", features = ["wgpu", "fusion", "train"] }

# Pinned bincode version to maintain compatibility with Burn records
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking and Async support
# We removed "blocking" and added "stream" for the volatile data pipeline
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"

# Utilities for math, randomness, and text processing
rand = "0.8"
regex = "1.5"
rayon = "1.8"